# legacy

./: .gitattributes  .gitignore  README.md  changed.txt  log.txt  note.txt  work-journal.txt
.github/ISSUE_TEMPLATE/: 00_bug_report.yaml  02_dev_repo_issue.yaml  bug_report.yaml  dev_repo_issue.yaml  feature_request.yaml
.github/workflows/: benchmarks.yml  compile.yml
MLRISC/mltree/: mltree-gen.sml
admin/: README.md  build-tar-files.sh  checkout-all.sh  cvs2svn-smlnj.options  freeze-as.sh  make-release.sh  prepare-release.sh  refresh-all.sh  stat-all.sh  svn-upgrade-all.sh  switch-all-svn-https.sh  zip-bin-lib.sh
asdl/: Makefile.in  configure.ac
b376/: a.sml  b.sml
base/: .cvsignore
base/NOTES/: BOOT  CVSNOTES  CYGWININSTALL  HISTORY  INSTALL  MACOSXINSTALL  WININSTALL  branches
base/READMES/: README
base/compiler/: INDEX  MAP  MLRISC-OPTIMIZER.cm  backend-alpha32.cm  backend-amd64.cm  backend-hppa.cm  backend-ppc.cm  backend-sparc.cm  backend-x86.cm  changes-dbm.txt  core.cm  work.txt
base/system/: ADD-PRIMOPS  BUILD64.txt  abcdef.cm  abcdef.sml  allcross  cmb-cross  cmb-make  fixpt  installml  makeml  testml
cml/src/: basis.cm
config/: .cvsignore  _arch-n-opsys  _ml-makedepend  _run-sml  actions  dependencies  download.sh  install.bat  install.sh  lexgen.bat  link-sml.bat  ml-antlr.bat  ml-build.bat  ml-burg.bat  ml-lex.bat  ml-nlffigen.bat  ml-ulex.bat  ml-yacc.bat  nowhere.bat  preloads  prepare-win-install.sh  releasedate  sml.bat  srcarchiveurl  targets  unpack  version  windows-build.sh
config/MacResources/: postinstall
config/WinSetup/: smlnj.wxs
doc/: Makefile.in  configure.ac
doc/config/: link-manuals.sh
doc/mk/: clean-rules.gmk  doc-rules_gmk.in
doc/src/: Makefile.in
doc/src/changelog/: HISTORY.txt  Makefile.in
doc/src/conf/: release-notes.css
doc/src/extensions/: Makefile.in
doc/src/install-notes/: Makefile.in
doc/src/man/: Makefile.in
doc/src/release-notes/: 110.93-README.txt  110.99.10-README.adoc  110.99.2-README.adoc  110.99.3-README.adoc  110.99.3-README.txt  110.99.4-README.adoc  110.99.5-README.adoc  110.99.6-README.adoc  110.99.6.1-README.adoc  110.99.7-README.adoc  110.99.7.1-README.adoc  110.99.8-README.adoc  110.99.9-README.adoc  2021.1-README.txt  Makefile.in  TEMPLATE
doc/src/smlnj-guide/: Makefile.in
eXene/: CHANGES  README  README-0.5  README-1.0  build-eXene  eXene.cm  sources.cm
eXene/bitmaps/: README  black-bm.sml  boxes-bm.sml  calc-bm.sml  center-ptr-bm.sml  cross-weave-bm.sml  dimple-bm.sml  dot-bm.sml  dots-bm.sml  dropbar-bm.sml  escherknot-bm.sml  load  (+34 more)
heap2asm/: heap2asm.sml
lexgen/: build  build.bat
ml-lex/: build.sh  lexgen.sml  ml-lex.cm
osx-dist/: README  build-pkg.sh  sign-pkg.sh
smlnj-c/: README  c-calls.sig.sml  c-calls.sml  cc-info.c  cc-info.cc-mipseb-irix5.sml  cc-info.defaults.sml  cc-info.gcc-sparc-sunos.sml  cc-info.gcc-x86-linux.sml  cc-info.sig.sml  cutil.sig.sml  cutil.sml  load.sml  sources.cm
smlnj-lib/: CHANGES  TODO
unix-dist/: build-pkg.sh
win-dist/: README  README.md  build-msi.bat  fetch-dist.sh  wsl-notes.txt
(+1089 files in other folders)
